--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,12 @@ buildscript {
         classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
     }
 }
+allprojects {
+    repositories {
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+}
         
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
@@ -79,8 +85,16 @@ dependencies {
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
 
-	compile project(':FCL')
-	compile project(':FVTM')
+	def localrepos = new File(project.projectDir, '/localrepos');
+	if(localrepos.exists()){
+		print "LocalRepos marker exists, using local copies.\n"
+		compile project(':FCL')
+		compile project(':FVTM')
+	}
+	else{
+		compile 'com.github.Fexcraft:FCL:1.12.2-SNAPSHOT'
+		compile 'com.github.Fexcraft:FVTM:1.12.2-SNAPSHOT'
+	}
 
 }
 
