--- a/build.gradle
+++ b/build.gradle
@@ -78,9 +78,9 @@ dependencies {
     // For more info...
     // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
     // http://www.gradle.org/docs/current/userguide/dependency_management.html
-	
-    compile project(':FCL')
-    compile project(':FVTM')
+
+    implementation project(':FCL')
+    implementation project(':FVTM')
 
 }
 
